Cambios en la estructura del proyecto

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rovers</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
             <div class="whitenav">
                 <div>
                     <div class="whitenavimg">
-                        <img src="../images/logo.jpg" alt="Rovers">
+                        <img src="./images/logo.jpg" alt="Rovers">
                     </div>
                     <!-- Icono de menú hamburguesa, oculto en pantallas grandes -->
                     <div class="menuicon"><i class="fa-solid fa-bars"></i></div>
@@ -100,7 +100,7 @@
             <p class="line">-------------------x-------------------</p>
             <div>
                 <figure class="imgcontainer">
-                    <img src="../images/about-main.jpg" alt="primer restaurante rovers">
+                    <img src="./images/about-main.jpg" alt="primer restaurante rovers">
                     <figcaption></figcaption>
                 </figure>
                 <div>
